# TrudDZ

./: BaseElement.cpp  BaseElement.h  CMakeLists.txt  Capacitor.cpp  Capacitor.h  ElectricitySource.cpp  ElectricitySource.h  Inductor.cpp  Inductor.h  MathModel.cpp  MathModel.h  Resistor.cpp  Resistor.h  VoltageSource.cpp  VoltageSource.h  gauss.cpp  gauss.h  main.cpp
